parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> translation_unit
Rule 1     translation_unit -> external_declaration
Rule 2     translation_unit -> translation_unit external_declaration
Rule 3     external_declaration -> function_definition
Rule 4     external_declaration -> declaration
Rule 5     function_definition -> declaration_specifiers declarator declaration_list compound_statement
Rule 6     function_definition -> declarator declaration_list compound_statement
Rule 7     function_definition -> declarator compound_statement
Rule 8     function_definition -> declaration_specifiers declarator compound_statement
Rule 9     declaration -> declaration_specifiers init_declarator_list SEMI
Rule 10    declaration -> declaration_specifiers SEMI
Rule 11    declaration_list -> declaration
Rule 12    declaration_list -> declaration_list declaration
Rule 13    declaration_specifiers -> storage_class_specifier declaration_specifiers
Rule 14    declaration_specifiers -> type_specifier declaration_specifiers
Rule 15    declaration_specifiers -> type_qualifier declaration_specifiers
Rule 16    declaration_specifiers -> storage_class_specifier
Rule 17    declaration_specifiers -> type_specifier
Rule 18    declaration_specifiers -> type_qualifier
Rule 19    storage_class_specifier -> AUTO
Rule 20    storage_class_specifier -> REGISTER
Rule 21    storage_class_specifier -> STATIC
Rule 22    storage_class_specifier -> EXTERN
Rule 23    storage_class_specifier -> TYPEDEF
Rule 24    type_specifier -> VOID
Rule 25    type_specifier -> CHAR
Rule 26    type_specifier -> SHORT
Rule 27    type_specifier -> INT
Rule 28    type_specifier -> LONG
Rule 29    type_specifier -> FLOAT
Rule 30    type_specifier -> DOUBLE
Rule 31    type_specifier -> SIGNED
Rule 32    type_specifier -> UNSIGNED
Rule 33    type_specifier -> struct_or_union_specifier
Rule 34    type_specifier -> enum_specifier
Rule 35    type_specifier -> TYPEID
Rule 36    type_qualifier -> CONST
Rule 37    type_qualifier -> VOLATILE
Rule 38    struct_or_union_specifier -> struct_or_union ID LBRACE struct_declaration_list RBRACE
Rule 39    struct_or_union_specifier -> struct_or_union LBRACE struct_declaration_list RBRACE
Rule 40    struct_or_union_specifier -> struct_or_union ID
Rule 41    struct_or_union -> STRUCT
Rule 42    struct_or_union -> UNION
Rule 43    struct_declaration_list -> struct_declaration
Rule 44    struct_declaration_list -> struct_declarator_list struct_declaration
Rule 45    init_declarator_list -> init_declarator
Rule 46    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 47    init_declarator -> declarator
Rule 48    init_declarator -> declarator EQUALS initializer
Rule 49    struct_declaration -> specifier_qualifier_list struct_declarator_list SEMI
Rule 50    specifier_qualifier_list -> type_specifier specifier_qualifier_list
Rule 51    specifier_qualifier_list -> type_specifier
Rule 52    specifier_qualifier_list -> type_qualifier specifier_qualifier_list
Rule 53    specifier_qualifier_list -> type_qualifier
Rule 54    struct_declarator_list -> struct_declarator
Rule 55    struct_declarator_list -> struct_declarator_list COMMA struct_declarator
Rule 56    struct_declarator -> declarator
Rule 57    struct_declarator -> declarator COLON constant_expression
Rule 58    struct_declarator -> COLON constant_expression
Rule 59    enum_specifier -> ENUM ID LBRACE enumerator_list RBRACE
Rule 60    enum_specifier -> ENUM LBRACE enumerator_list RBRACE
Rule 61    enum_specifier -> ENUM ID
Rule 62    enumerator_list -> enumerator
Rule 63    enumerator_list -> enumerator_list COMMA enumerator
Rule 64    enumerator -> ID
Rule 65    enumerator -> ID EQUALS constant_expression
Rule 66    declarator -> pointer direct_declarator
Rule 67    declarator -> direct_declarator
Rule 68    direct_declarator -> ID
Rule 69    direct_declarator -> LPAREN declarator RPAREN
Rule 70    direct_declarator -> direct_declarator LBRACKET constant_expression_opt RBRACKET
Rule 71    direct_declarator -> direct_declarator LPAREN parameter_type_list RPAREN
Rule 72    direct_declarator -> direct_declarator LPAREN identifier_list RPAREN
Rule 73    direct_declarator -> direct_declarator LPAREN RPAREN
Rule 74    pointer -> TIMES type_qualifier_list
Rule 75    pointer -> TIMES
Rule 76    pointer -> TIMES type_qualifier_list pointer
Rule 77    pointer -> TIMES pointer
Rule 78    type_qualifier_list -> type_qualifier
Rule 79    type_qualifier_list -> type_qualifier_list type_qualifier
Rule 80    parameter_type_list -> parameter_list
Rule 81    parameter_type_list -> parameter_list COMMA ELLIPSIS
Rule 82    parameter_list -> parameter_declaration
Rule 83    parameter_list -> parameter_list COMMA parameter_declaration
Rule 84    parameter_declaration -> declaration_specifiers declarator
Rule 85    parameter_declaration -> declaration_specifiers abstract_declarator_opt
Rule 86    identifier_list -> ID
Rule 87    identifier_list -> identifier_list COMMA ID
Rule 88    initializer -> assignment_expression
Rule 89    initializer -> LBRACE initializer_list RBRACE
Rule 90    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 91    initializer_list -> initializer
Rule 92    initializer_list -> initializer_list COMMA initializer
Rule 93    type_name -> specifier_qualifier_list abstract_declarator_opt
Rule 94    abstract_declarator_opt -> empty
Rule 95    abstract_declarator_opt -> abstract_declarator
Rule 96    abstract_declarator -> pointer
Rule 97    abstract_declarator -> pointer direct_abstract_declarator
Rule 98    abstract_declarator -> direct_abstract_declarator
Rule 99    direct_abstract_declarator -> LPAREN abstract_declarator RPAREN
Rule 100   direct_abstract_declarator -> direct_abstract_declarator LBRACKET constant_expression_opt RBRACKET
Rule 101   direct_abstract_declarator -> LBRACKET constant_expression_opt RBRACKET
Rule 102   direct_abstract_declarator -> direct_abstract_declarator LPAREN parameter_type_list_opt RPAREN
Rule 103   direct_abstract_declarator -> LPAREN parameter_type_list_opt RPAREN
Rule 104   constant_expression_opt -> empty
Rule 105   constant_expression_opt -> constant_expression
Rule 106   parameter_type_list_opt -> empty
Rule 107   parameter_type_list_opt -> parameter_type_list
Rule 108   statement -> labeled_statement
Rule 109   statement -> expression_statement
Rule 110   statement -> compound_statement
Rule 111   statement -> selection_statement
Rule 112   statement -> iteration_statement
Rule 113   statement -> jump_statement
Rule 114   labeled_statement -> ID COLON statement
Rule 115   labeled_statement -> CASE constant_expression COLON statement
Rule 116   labeled_statement -> DEFAULT COLON statement
Rule 117   expression_statement -> expression_opt SEMI
Rule 118   compound_statement -> LBRACE declaration_list statement_list RBRACE
Rule 119   compound_statement -> LBRACE statement_list RBRACE
Rule 120   compound_statement -> LBRACE declaration_list RBRACE
Rule 121   compound_statement -> LBRACE RBRACE
Rule 122   statement_list -> statement
Rule 123   statement_list -> statement_list statement
Rule 124   selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 125   selection_statement -> SWITCH LPAREN expression RPAREN statement
Rule 126   iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 127   iteration_statement -> FOR LPAREN expression_opt SEMI expression_opt SEMI expression_opt RPAREN statement
Rule 128   iteration_statement -> DO statement WHILE LPAREN expression RPAREN SEMI
Rule 129   jump_statement -> GOTO ID SEMI
Rule 130   jump_statement -> CONTINUE SEMI
Rule 131   jump_statement -> BREAK SEMI
Rule 132   jump_statement -> RETURN expression_opt SEMI
Rule 133   expression_opt -> empty
Rule 134   expression_opt -> expression
Rule 135   expression -> assignment_expression
Rule 136   expression -> expression COMMA assignment_expression
Rule 137   assignment_expression -> conditional_expression
Rule 138   assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 139   assignment_operator -> EQUALS
Rule 140   assignment_operator -> TIMESEQUAL
Rule 141   assignment_operator -> DIVEQUAL
Rule 142   assignment_operator -> MODEQUAL
Rule 143   assignment_operator -> PLUSEQUAL
Rule 144   assignment_operator -> MINUSEQUAL
Rule 145   assignment_operator -> LSHIFTEQUAL
Rule 146   assignment_operator -> RSHIFTEQUAL
Rule 147   assignment_operator -> ANDEQUAL
Rule 148   assignment_operator -> OREQUAL
Rule 149   assignment_operator -> XOREQUAL
Rule 150   conditional_expression -> logical_or_expression
Rule 151   conditional_expression -> logical_or_expression CONDOP expression COLON conditional_expression
Rule 152   constant_expression -> conditional_expression
Rule 153   logical_or_expression -> logical_and_expression
Rule 154   logical_or_expression -> logical_or_expression LOR logical_and_expression
Rule 155   logical_and_expression -> inclusive_or_expression
Rule 156   logical_and_expression -> logical_and_expression LAND inclusive_or_expression
Rule 157   inclusive_or_expression -> exclusive_or_expression
Rule 158   inclusive_or_expression -> inclusive_or_expression OR exclusive_or_expression
Rule 159   exclusive_or_expression -> and_expression
Rule 160   exclusive_or_expression -> exclusive_or_expression XOR and_expression
Rule 161   and_expression -> equality_expression
Rule 162   and_expression -> and_expression AND equality_expression
Rule 163   equality_expression -> relational_expression
Rule 164   equality_expression -> equality_expression EQ relational_expression
Rule 165   equality_expression -> equality_expression NE relational_expression
Rule 166   relational_expression -> shift_expression
Rule 167   relational_expression -> relational_expression LT shift_expression
Rule 168   relational_expression -> relational_expression GT shift_expression
Rule 169   relational_expression -> relational_expression LE shift_expression
Rule 170   relational_expression -> relational_expression GE shift_expression
Rule 171   shift_expression -> additive_expression
Rule 172   shift_expression -> shift_expression LSHIFT additive_expression
Rule 173   shift_expression -> shift_expression RSHIFT additive_expression
Rule 174   additive_expression -> multiplicative_expression
Rule 175   additive_expression -> additive_expression PLUS multiplicative_expression
Rule 176   additive_expression -> additive_expression MINUS multiplicative_expression
Rule 177   multiplicative_expression -> cast_expression
Rule 178   multiplicative_expression -> multiplicative_expression TIMES cast_expression
Rule 179   multiplicative_expression -> multiplicative_expression DIVIDE cast_expression
Rule 180   multiplicative_expression -> multiplicative_expression MOD cast_expression
Rule 181   cast_expression -> unary_expression
Rule 182   cast_expression -> LPAREN type_name RPAREN cast_expression
Rule 183   unary_expression -> postfix_expression
Rule 184   unary_expression -> PLUSPLUS unary_expression
Rule 185   unary_expression -> MINUSMINUS unary_expression
Rule 186   unary_expression -> unary_operator cast_expression
Rule 187   unary_expression -> SIZEOF unary_expression
Rule 188   unary_expression -> SIZEOF LPAREN type_name RPAREN
Rule 189   unary_operator -> AND
Rule 190   unary_operator -> TIMES
Rule 191   unary_operator -> PLUS
Rule 192   unary_operator -> MINUS
Rule 193   unary_operator -> NOT
Rule 194   unary_operator -> LNOT
Rule 195   postfix_expression -> primary_expression
Rule 196   postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 197   postfix_expression -> postfix_expression LPAREN argument_expression_list RPAREN
Rule 198   postfix_expression -> postfix_expression LPAREN RPAREN
Rule 199   postfix_expression -> postfix_expression PERIOD ID
Rule 200   postfix_expression -> postfix_expression ARROW ID
Rule 201   postfix_expression -> postfix_expression PLUSPLUS
Rule 202   postfix_expression -> postfix_expression MINUSMINUS
Rule 203   primary_expression -> ID
Rule 204   primary_expression -> constant
Rule 205   primary_expression -> SCONST
Rule 206   primary_expression -> LPAREN expression RPAREN
Rule 207   argument_expression_list -> assignment_expression
Rule 208   argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 209   constant -> ICONST
Rule 210   constant -> FCONST
Rule 211   constant -> CCONST
Rule 212   empty -> <empty>

Terminals, with rules where they appear

AND                  : 162 189
ANDEQUAL             : 147
ARROW                : 200
AUTO                 : 19
BREAK                : 131
CASE                 : 115
CCONST               : 211
CHAR                 : 25
COLON                : 57 58 114 115 116 151
COMMA                : 46 55 63 81 83 87 90 92 136 208
CONDOP               : 151
CONST                : 36
CONTINUE             : 130
DEFAULT              : 116
DIVEQUAL             : 141
DIVIDE               : 179
DO                   : 128
DOUBLE               : 30
ELLIPSIS             : 81
ELSE                 : 124
ENUM                 : 59 60 61
EQ                   : 164
EQUALS               : 48 65 139
EXTERN               : 22
FCONST               : 210
FLOAT                : 29
FOR                  : 127
GE                   : 170
GOTO                 : 129
GT                   : 168
ICONST               : 209
ID                   : 38 40 59 61 64 65 68 86 87 114 129 199 200 203
IF                   : 124
INT                  : 27
LAND                 : 156
LBRACE               : 38 39 59 60 89 90 118 119 120 121
LBRACKET             : 70 100 101 196
LE                   : 169
LNOT                 : 194
LONG                 : 28
LOR                  : 154
LPAREN               : 69 71 72 73 99 102 103 124 125 126 127 128 182 188 197 198 206
LSHIFT               : 172
LSHIFTEQUAL          : 145
LT                   : 167
MINUS                : 176 192
MINUSEQUAL           : 144
MINUSMINUS           : 185 202
MOD                  : 180
MODEQUAL             : 142
NE                   : 165
NOT                  : 193
OR                   : 158
OREQUAL              : 148
PERIOD               : 199
PLUS                 : 175 191
PLUSEQUAL            : 143
PLUSPLUS             : 184 201
RBRACE               : 38 39 59 60 89 90 118 119 120 121
RBRACKET             : 70 100 101 196
REGISTER             : 20
RETURN               : 132
RPAREN               : 69 71 72 73 99 102 103 124 125 126 127 128 182 188 197 198 206
RSHIFT               : 173
RSHIFTEQUAL          : 146
SCONST               : 205
SEMI                 : 9 10 49 117 127 127 128 129 130 131 132
SHORT                : 26
SIGNED               : 31
SIZEOF               : 187 188
STATIC               : 21
STRUCT               : 41
SWITCH               : 125
TIMES                : 74 75 76 77 178 190
TIMESEQUAL           : 140
TYPEDEF              : 23
TYPEID               : 35
UNION                : 42
UNSIGNED             : 32
VOID                 : 24
VOLATILE             : 37
WHILE                : 126 128
XOR                  : 160
XOREQUAL             : 149
error                : 

Nonterminals, with rules where they appear

abstract_declarator  : 95 99
abstract_declarator_opt : 85 93
additive_expression  : 171 172 173 175 176
and_expression       : 159 160 162
argument_expression_list : 197 208
assignment_expression : 88 135 136 138 207 208
assignment_operator  : 138
cast_expression      : 177 178 179 180 182 186
compound_statement   : 5 6 7 8 110
conditional_expression : 137 151 152
constant             : 204
constant_expression  : 57 58 65 105 115
constant_expression_opt : 70 100 101
declaration          : 4 11 12
declaration_list     : 5 6 12 118 120
declaration_specifiers : 5 8 9 10 13 14 15 84 85
declarator           : 5 6 7 8 47 48 56 57 69 84
direct_abstract_declarator : 97 98 100 102
direct_declarator    : 66 67 70 71 72 73
empty                : 94 104 106 133
enum_specifier       : 34
enumerator           : 62 63
enumerator_list      : 59 60 63
equality_expression  : 161 162 164 165
exclusive_or_expression : 157 158 160
expression           : 124 125 126 128 134 136 151 196 206
expression_opt       : 117 127 127 127 132
expression_statement : 109
external_declaration : 1 2
function_definition  : 3
identifier_list      : 72 87
inclusive_or_expression : 155 156 158
init_declarator      : 45 46
init_declarator_list : 9 46
initializer          : 48 91 92
initializer_list     : 89 90 92
iteration_statement  : 112
jump_statement       : 113
labeled_statement    : 108
logical_and_expression : 153 154 156
logical_or_expression : 150 151 154
multiplicative_expression : 174 175 176 178 179 180
parameter_declaration : 82 83
parameter_list       : 80 81 83
parameter_type_list  : 71 107
parameter_type_list_opt : 102 103
pointer              : 66 76 77 96 97
postfix_expression   : 183 196 197 198 199 200 201 202
primary_expression   : 195
relational_expression : 163 164 165 167 168 169 170
selection_statement  : 111
shift_expression     : 166 167 168 169 170 172 173
specifier_qualifier_list : 49 50 52 93
statement            : 114 115 116 122 123 124 124 125 126 127 128
statement_list       : 118 119 123
storage_class_specifier : 13 16
struct_declaration   : 43 44
struct_declaration_list : 38 39
struct_declarator    : 54 55
struct_declarator_list : 44 49 55
struct_or_union      : 38 39 40
struct_or_union_specifier : 33
translation_unit     : 2 0
type_name            : 182 188
type_qualifier       : 15 18 52 53 78 79
type_qualifier_list  : 74 76 79
type_specifier       : 14 17 50 51
unary_expression     : 138 181 184 185 187
unary_operator       : 186

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . external_declaration
    (2) translation_unit -> . translation_unit external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (6) function_definition -> . declarator declaration_list compound_statement
    (7) function_definition -> . declarator compound_statement
    (8) function_definition -> . declaration_specifiers declarator compound_statement
    (9) declaration -> . declaration_specifiers init_declarator_list SEMI
    (10) declaration -> . declaration_specifiers SEMI
    (13) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (14) declaration_specifiers -> . type_specifier declaration_specifiers
    (15) declaration_specifiers -> . type_qualifier declaration_specifiers
    (16) declaration_specifiers -> . storage_class_specifier
    (17) declaration_specifiers -> . type_specifier
    (18) declaration_specifiers -> . type_qualifier
    (66) declarator -> . pointer direct_declarator
    (67) declarator -> . direct_declarator
    (19) storage_class_specifier -> . AUTO
    (20) storage_class_specifier -> . REGISTER
    (21) storage_class_specifier -> . STATIC
    (22) storage_class_specifier -> . EXTERN
    (23) storage_class_specifier -> . TYPEDEF
    (24) type_specifier -> . VOID
    (25) type_specifier -> . CHAR
    (26) type_specifier -> . SHORT
    (27) type_specifier -> . INT
    (28) type_specifier -> . LONG
    (29) type_specifier -> . FLOAT
    (30) type_specifier -> . DOUBLE
    (31) type_specifier -> . SIGNED
    (32) type_specifier -> . UNSIGNED
    (33) type_specifier -> . struct_or_union_specifier
    (34) type_specifier -> . enum_specifier
    (35) type_specifier -> . TYPEID
    (36) type_qualifier -> . CONST
    (37) type_qualifier -> . VOLATILE
    (74) pointer -> . TIMES type_qualifier_list
    (75) pointer -> . TIMES
    (76) pointer -> . TIMES type_qualifier_list pointer
    (77) pointer -> . TIMES pointer
    (68) direct_declarator -> . ID
    (69) direct_declarator -> . LPAREN declarator RPAREN
    (70) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (71) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (72) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (73) direct_declarator -> . direct_declarator LPAREN RPAREN
    (38) struct_or_union_specifier -> . struct_or_union ID LBRACE struct_declaration_list RBRACE
    (39) struct_or_union_specifier -> . struct_or_union LBRACE struct_declaration_list RBRACE
    (40) struct_or_union_specifier -> . struct_or_union ID
    (59) enum_specifier -> . ENUM ID LBRACE enumerator_list RBRACE
    (60) enum_specifier -> . ENUM LBRACE enumerator_list RBRACE
    (61) enum_specifier -> . ENUM ID
    (41) struct_or_union -> . STRUCT
    (42) struct_or_union -> . UNION

    AUTO            shift and go to state 21
    REGISTER        shift and go to state 14
    STATIC          shift and go to state 9
    EXTERN          shift and go to state 10
    TYPEDEF         shift and go to state 19
    VOID            shift and go to state 6
    CHAR            shift and go to state 8
    SHORT           shift and go to state 2
    INT             shift and go to state 31
    LONG            shift and go to state 16
    FLOAT           shift and go to state 28
    DOUBLE          shift and go to state 32
    SIGNED          shift and go to state 34
    UNSIGNED        shift and go to state 15
    TYPEID          shift and go to state 27
    CONST           shift and go to state 3
    VOLATILE        shift and go to state 36
    TIMES           shift and go to state 23
    ID              shift and go to state 26
    LPAREN          shift and go to state 4
    ENUM            shift and go to state 20
    STRUCT          shift and go to state 30
    UNION           shift and go to state 17

    storage_class_specifier        shift and go to state 1
    struct_or_union_specifier      shift and go to state 5
    pointer                        shift and go to state 11
    external_declaration           shift and go to state 12
    type_specifier                 shift and go to state 13
    translation_unit               shift and go to state 18
    struct_or_union                shift and go to state 7
    direct_declarator              shift and go to state 22
    declaration_specifiers         shift and go to state 24
    declaration                    shift and go to state 25
    function_definition            shift and go to state 29
    enum_specifier                 shift and go to state 35
    type_qualifier                 shift and go to state 33
    declarator                     shift and go to state 37

state 1

    (13) declaration_specifiers -> storage_class_specifier . declaration_specifiers
    (16) declaration_specifiers -> storage_class_specifier .
    (13) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (14) declaration_specifiers -> . type_specifier declaration_specifiers
    (15) declaration_specifiers -> . type_qualifier declaration_specifiers
    (16) declaration_specifiers -> . storage_class_specifier
    (17) declaration_specifiers -> . type_specifier
    (18) declaration_specifiers -> . type_qualifier
    (19) storage_class_specifier -> . AUTO
    (20) storage_class_specifier -> . REGISTER
    (21) storage_class_specifier -> . STATIC
    (22) storage_class_specifier -> . EXTERN
    (23) storage_class_specifier -> . TYPEDEF
    (24) type_specifier -> . VOID
    (25) type_specifier -> . CHAR
    (26) type_specifier -> . SHORT
    (27) type_specifier -> . INT
    (28) type_specifier -> . LONG
    (29) type_specifier -> . FLOAT
    (30) type_specifier -> . DOUBLE
    (31) type_specifier -> . SIGNED
    (32) type_specifier -> . UNSIGNED
    (33) type_specifier -> . struct_or_union_specifier
    (34) type_specifier -> . enum_specifier
    (35) type_specifier -> . TYPEID
    (36) type_qualifier -> . CONST
    (37) type_qualifier -> . VOLATILE
    (38) struct_or_union_specifier -> . struct_or_union ID LBRACE struct_declaration_list RBRACE
    (39) struct_or_union_specifier -> . struct_or_union LBRACE struct_declaration_list RBRACE
    (40) struct_or_union_specifier -> . struct_or_union ID
    (59) enum_specifier -> . ENUM ID LBRACE enumerator_list RBRACE
    (60) enum_specifier -> . ENUM LBRACE enumerator_list RBRACE
    (61) enum_specifier -> . ENUM ID
    (41) struct_or_union -> . STRUCT
    (42) struct_or_union -> . UNION

    TIMES           reduce using rule 16 (declaration_specifiers -> storage_class_specifier .)
    ID              reduce using rule 16 (declaration_specifiers -> storage_class_specifier .)
    LPAREN          reduce using rule 16 (declaration_specifiers -> storage_class_specifier .)
    LBRACKET        reduce using rule 16 (declaration_specifiers -> storage_class_specifier .)
    COMMA           reduce using rule 16 (declaration_specifiers -> storage_class_specifier .)
    RPAREN          reduce using rule 16 (declaration_specifiers -> storage_class_specifier .)
    SEMI            reduce using rule 16 (declaration_specifiers -> storage_class_specifier .)
    AUTO            shift and go to state 21
    REGISTER        shift and go to state 14
    STATIC          shift and go to state 9
    EXTERN          shift and go to state 10
    TYPEDEF         shift and go to state 19
    VOID            shift and go to state 6
    CHAR            shift and go to state 8
    SHORT           shift and go to state 2
    INT             shift and go to state 31
    LONG            shift and go to state 16
    FLOAT           shift and go to state 28
    DOUBLE          shift and go to state 32
    SIGNED          shift and go to state 34
    UNSIGNED        shift and go to state 15
    TYPEID          shift and go to state 27
    CONST           shift and go to state 3
    VOLATILE        shift and go to state 36
    ENUM            shift and go to state 20
    STRUCT          shift and go to state 30
    UNION           shift and go to state 17

    storage_class_specifier        shift and go to state 1
    struct_or_union                shift and go to state 7
    type_specifier                 shift and go to state 13
    enum_specifier                 shift and go to state 35
    struct_or_union_specifier      shift and go to state 5
    type_qualifier                 shift and go to state 33
    declaration_specifiers         shift and go to state 38

state 2

    (26) type_specifier -> SHORT .

    VOID            reduce using rule 26 (type_specifier -> SHORT .)
    CHAR            reduce using rule 26 (type_specifier -> SHORT .)
    SHORT           reduce using rule 26 (type_specifier -> SHORT .)
    INT             reduce using rule 26 (type_specifier -> SHORT .)
    LONG            reduce using rule 26 (type_specifier -> SHORT .)
    FLOAT           reduce using rule 26 (type_specifier -> SHORT .)
    DOUBLE          reduce using rule 26 (type_specifier -> SHORT .)
    SIGNED          reduce using rule 26 (type_specifier -> SHORT .)
    UNSIGNED        reduce using rule 26 (type_specifier -> SHORT .)
    TYPEID          reduce using rule 26 (type_specifier -> SHORT .)
    CONST           reduce using rule 26 (type_specifier -> SHORT .)
    VOLATILE        reduce using rule 26 (type_specifier -> SHORT .)
    ENUM            reduce using rule 26 (type_specifier -> SHORT .)
    STRUCT          reduce using rule 26 (type_specifier -> SHORT .)
    UNION           reduce using rule 26 (type_specifier -> SHORT .)
    COLON           reduce using rule 26 (type_specifier -> SHORT .)
    TIMES           reduce using rule 26 (type_specifier -> SHORT .)
    ID              reduce using rule 26 (type_specifier -> SHORT .)
    LPAREN          reduce using rule 26 (type_specifier -> SHORT .)
    LBRACKET        reduce using rule 26 (type_specifier -> SHORT .)
    RPAREN          reduce using rule 26 (type_specifier -> SHORT .)
    AUTO            reduce using rule 26 (type_specifier -> SHORT .)
    REGISTER        reduce using rule 26 (type_specifier -> SHORT .)
    STATIC          reduce using rule 26 (type_specifier -> SHORT .)
    EXTERN          reduce using rule 26 (type_specifier -> SHORT .)
    TYPEDEF         reduce using rule 26 (type_specifier -> SHORT .)
    SEMI            reduce using rule 26 (type_specifier -> SHORT .)
    COMMA           reduce using rule 26 (type_specifier -> SHORT .)


state 3

    (36) type_qualifier -> CONST .

    AUTO            reduce using rule 36 (type_qualifier -> CONST .)
    REGISTER        reduce using rule 36 (type_qualifier -> CONST .)
    STATIC          reduce using rule 36 (type_qualifier -> CONST .)
    EXTERN          reduce using rule 36 (type_qualifier -> CONST .)
    TYPEDEF         reduce using rule 36 (type_qualifier -> CONST .)
    VOID            reduce using rule 36 (type_qualifier -> CONST .)
    CHAR            reduce using rule 36 (type_qualifier -> CONST .)
    SHORT           reduce using rule 36 (type_qualifier -> CONST .)
    INT             reduce using rule 36 (type_qualifier -> CONST .)
    LONG            reduce using rule 36 (type_qualifier -> CONST .)
    FLOAT           reduce using rule 36 (type_qualifier -> CONST .)
    DOUBLE          reduce using rule 36 (type_qualifier -> CONST .)
    SIGNED          reduce using rule 36 (type_qualifier -> CONST .)
    UNSIGNED        reduce using rule 36 (type_qualifier -> CONST .)
    TYPEID          reduce using rule 36 (type_qualifier -> CONST .)
    CONST           reduce using rule 36 (type_qualifier -> CONST .)
    VOLATILE        reduce using rule 36 (type_qualifier -> CONST .)
    ENUM            reduce using rule 36 (type_qualifier -> CONST .)
    STRUCT          reduce using rule 36 (type_qualifier -> CONST .)
    UNION           reduce using rule 36 (type_qualifier -> CONST .)
    SEMI            reduce using rule 36 (type_qualifier -> CONST .)
    TIMES           reduce using rule 36 (type_qualifier -> CONST .)
    ID              reduce using rule 36 (type_qualifier -> CONST .)
    LPAREN          reduce using rule 36 (type_qualifier -> CONST .)
    LBRACKET        reduce using rule 36 (type_qualifier -> CONST .)
    COMMA           reduce using rule 36 (type_qualifier -> CONST .)
    RPAREN          reduce using rule 36 (type_qualifier -> CONST .)
    COLON           reduce using rule 36 (type_qualifier -> CONST .)


state 4

    (69) direct_declarator -> LPAREN . declarator RPAREN
    (66) declarator -> . pointer direct_declarator
    (67) declarator -> . direct_declarator
    (74) pointer -> . TIMES type_qualifier_list
    (75) pointer -> . TIMES
    (76) pointer -> . TIMES type_qualifier_list pointer
    (77) pointer -> . TIMES pointer
    (68) direct_declarator -> . ID
    (69) direct_declarator -> . LPAREN declarator RPAREN
    (70) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (71) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (72) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (73) direct_declarator -> . direct_declarator LPAREN RPAREN

    TIMES           shift and go to state 23
    ID              shift and go to state 26
    LPAREN          shift and go to state 4

    direct_declarator              shift and go to state 22
    declarator                     shift and go to state 39
    pointer                        shift and go to state 11

state 5

    (33) type_specifier -> struct_or_union_specifier .

    VOID            reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    CHAR            reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    SHORT           reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    INT             reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    LONG            reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    FLOAT           reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    DOUBLE          reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    SIGNED          reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    UNSIGNED        reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    TYPEID          reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    CONST           reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    VOLATILE        reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    ENUM            reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    STRUCT          reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    UNION           reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    COLON           reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    TIMES           reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    ID              reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    LPAREN          reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    LBRACKET        reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    RPAREN          reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    AUTO            reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    REGISTER        reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    STATIC          reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    EXTERN          reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    TYPEDEF         reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    SEMI            reduce using rule 33 (type_specifier -> struct_or_union_specifier .)
    COMMA           reduce using rule 33 (type_specifier -> struct_or_union_specifier .)


state 6

    (24) type_specifier -> VOID .
